--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=bankingApp
+spring.datasource.url=jdbc:mysql://localhost:3306/banking-app
+spring.datasource.username=root
+spring.datasource.password=gopi@1234
+spring.jpa.hibernate.ddl-auto=update
+server.port=8081
